
  o Link for Adela's website was added.
  o Columns for BIC and its adjusted version were swapped in table for
    IRT models comparison. Text above table was also updated.
  o In IRT section dpi of downloaded plots was set to 300.
  o In IRT training downloaded plots also include legend with parameters.
  o In all IRT models table with parameters includes all parameters
    a, b, c, d.


---------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.4 (2017-08-28) -
---------------------------------------------------

MINOR UPDATES

  o Reports were mildly updated.
  o Resolution of figures in reports was increased (now 300ppi)
  o Dependencies were updated.
  o Some typos fixed.
  o Legends of plots were unified and placed in better way for
      - 'NLR IRT Z'
      - 'DDF'
      - function 'plotDIFlogistic()'
  o Bug in item names for 'DDF' subsection of 'Fairness/DIF' section
    was fixed.

---------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.3 (2017-08-22) -
---------------------------------------------------

*** THIS IS A CRAN VERSION ***

MAJOR UPDATES

  o Report's customized options were extended. Reports now include also
    dynamic description.
  o Author and dataset name can be now filled and add into reports.
  o Dataset 'difMedical' was renamed to 'MSAT-B' according to 'difNLR'
    package. Its description was mildly updated.
  o Purification options were added into 'Nonlinear IRT Z' and 'DDF' subsections
    of 'DIF/Fairness' sections.
  o Purification options was added 'DDF' analysis in 'Reports' section when customized
    setting is selected.


MINOR UPDATES

  o Size of plots and font in plots was changed for reports.
  o Plots in HTML report are now centered.
  o Wording of reports' default option was updated.
  o References were updated in 'Reference' section and also in README file.
  o Wording of Spearman test in 'Validity' section was mildly updated.
